Fixed distorted thumbnails in picker, but it does not crop them properly

--- a/libsrc/editor.css
+++ b/libsrc/editor.css
@@ -40,5 +40,5 @@
 #right * { vertical-align : middle }
 #btn_thumbnail { font-weight : bold; cursor : default; }
 #dia_edit_bg h2 { text-align : center; }
-#dia_thumbnail { width : 675px; max-height : 400px; overflow : auto; }
+#dia_thumbnail { width : 690px; max-height : 400px; overflow : auto; }
 #dia_thumbnail .thumb { float : left; margin : 5px; }
